# fleet_adapter_demo

./: CMakeLists.txt  README.md  package.xml
config/: fleet_config.yaml  params.yaml  rmf.rviz
launch/: fleet_adapter_demo.launch.py
launch/include/: rmf_common.launch.py  visualization.launch.py
maps/: turtlebot3_world.building.yaml
