<?xml version="1.0"?>
<package format="3">
  <name>fleet_adapter_demo</name>
  <version>0.0.1</version>
  <description>The fleet_adapter_demo package</description>

  <maintainer email="thales.silva@coppe.ufrj.br">Thales Silva</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>fleet_adapter</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
